  EntityEditModel.createEntityLookupField() renamed to createForeignKeyLookupField()
  EntityEditPanel.createEntityLookupField() renamed to createForeignKeyLookupField(), createEntityComboBox() renamed to createForeignKeyComboBox(), createEntityField() renamed to createForeignKeyField()
  ClientUserMonitor, user history no longer displays a single user as multiple based on case difference in usernames
  EntityEditPanel.afterInsertFocusPropertyID and afterInsertFocusComponent added
  EntityComboBoxModel.strictForeignKeyFiltering property added and tested
  Util.getInt() and getLong() now remove both dots and commas before parsing
  IntField, LongField and DoubleField no longer use a ThreadLocal for the NumberFormat
  ValueLinks, numerical value links ignore the NumberFormat if the field is editable (very problematic otherwise)
  IntField, LongField and Double field, removed constructor overloaded with min and max
0.9.8
  IntField, DoubleField, LongField and relevant classes refactored and improved, NumberField disables grouping, must be turned on explicitly
  UiValues, numerical value methods no longer take a format parameter, the text field does all the formatting
  EntityUiUtil now supplies cloned format instances to NumberField descendants
  LocalEntityConnection now logs RecordModifiedExceptions correctly
  IntField, columns paramater was not used
  DefaultEntityComboBoxModel.translateSelectionItem() no longer throws exception if item is not found, now returns null instead
  DefaultEntityTableModel.getPreferencesKey() renamed to getUserPreferencesKey() and made protected
  AbstractEntityConnectionProvider.isConnectionValid() now returns false in case internal connection validity checking throws an exception and validateConnection() sets the internal connection to null in case it is invalid