@@ -3,7 +3,6 @@
  */
 package org.jminor.common.model.tools;
 
-import org.jminor.common.model.DateUtil;
 import org.jminor.common.model.Util;
 import org.jminor.common.model.formats.DateFormats;
 
@@ -14,10 +13,12 @@ import java.io.PrintWriter;
 import java.io.Serializable;
 import java.io.StringWriter;
 import java.text.DateFormat;
+import java.text.NumberFormat;
 import java.util.Collections;
 import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.concurrent.TimeUnit;
 
 /**
  * A cyclical method call logger allowing nested logging of method calls.
@@ -333,7 +334,12 @@ public class MethodLogger implements Serializable {
   public static final class Entry implements Serializable {
 
     private static final long serialVersionUID = 1;
-    private static final ThreadLocal<DateFormat> TIMESTAMP_FORMAT = DateUtil.getThreadLocalDateFormat(DateFormats.EXACT_TIMESTAMP);
+    private static final DateFormat TIMESTAMP_FORMAT = DateFormats.getDateFormat(DateFormats.EXACT_TIMESTAMP);
+    private static final NumberFormat MICROSECONDS_FORMAT = NumberFormat.getIntegerInstance();
+
+    static {
+      MICROSECONDS_FORMAT.setGroupingUsed(true);
+    }
 
     private LinkedList<Entry> subEntries = new LinkedList<>();
     private String method;
@@ -490,16 +496,17 @@ public class MethodLogger implements Serializable {
       final String indentString = indentation > 0 ? Util.padString("", indentation, '\t', false) : "";
       final StringBuilder stringBuilder = new StringBuilder();
       if (isComplete()) {
-        stringBuilder.append(indentString).append(TIMESTAMP_FORMAT.get().format(accessTime)).append(" @ ").append(method).append(
+        stringBuilder.append(indentString).append(TIMESTAMP_FORMAT.format(accessTime)).append(" @ ").append(method).append(
                 !Util.nullOrEmpty(accessMessage) ? (": " + accessMessage) : "").append("\n");
-        stringBuilder.append(indentString).append(TIMESTAMP_FORMAT.get().format(exitTime)).append(" > ").append(getDelta()).append(" ms")
+        stringBuilder.append(indentString).append(TIMESTAMP_FORMAT.format(exitTime)).append(" > ")
+                .append(MICROSECONDS_FORMAT.format(TimeUnit.NANOSECONDS.toMicros(getDeltaNano()))).append(" μs")
                 .append(exitMessage == null ? "" : " (" + exitMessage + ")");
         if (stackTrace != null) {
           stringBuilder.append("\n").append(stackTrace);
         }
       }
       else {
-        stringBuilder.append(indentString).append(TIMESTAMP_FORMAT.get().format(accessTime)).append(" @ ").append(method).append(
+        stringBuilder.append(indentString).append(TIMESTAMP_FORMAT.format(accessTime)).append(" @ ").append(method).append(
                 !Util.nullOrEmpty(accessMessage) ? (": " + accessMessage) : "");
       }
 
